# hermes-supergrok-gateway

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  UPSTREAM.md  compose.yaml  pyproject.toml  start-dashboard.bat
.github/workflows/: docker.yml
src/supergrok_openai/: auth.py  cli.py  server.py  stats.py  store.py  webauth.py  xai_compat.py
src/supergrok_openai/web/: app.css  app.js  auth.css  auth.html  auth.js  index.html
tests/: test_anthropic_compat.py  test_server.py  test_store_and_import.py  test_webauth.py  test_xai_compat.py
windows-exe/: .gitignore  README.md  SuperGrokGateway.spec  UPSTREAM.md  build-exe.bat  build-requirements.in  portable_main.py  pyproject.toml  version_info.txt
windows-exe/src/supergrok_openai/: __init__.py  anthropic_compat.py  server.py  xai_compat.py
windows-exe/src/supergrok_openai/web/: app.css  app.js  index.html
windows-exe/tests/: test_auth.py  test_portable_server.py  test_stats.py  test_xai_compat.py
