[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "supergrok-openai-windows"
version = "1.0.4"
description = "Password-free Windows portable SuperGrok gateway with embedded web UI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "aiohttp>=3.9,<4",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.14,<1",
]

[project.scripts]
supergrok-openai-windows = "supergrok_openai.cli:main"

[tool.setuptools.package-data]
supergrok_openai = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
